<resources>
    <string name="app_name">FallingWords</string>

    <string name="game_instructions">\t\t\t\t\t\t\t\t▼▼▼ Game Instruction : ▼▼▼\n\n\n
1. The question word will be in \'English\'(10 such questions).\n\n
2. There will be four spanish options falling from top to bottom (each falls 2 seconds)\n\n
3. You need to click button \"Select Word\" to choose the correct spanish word that matches english question, after button click, it displays next question.\n\n
4. After showing 4 options, if you have not clicked \"Select Word\" option, it will skip current question and show next question.\n\n
As soon as you click \"Start Game\" button, the game will start. So be ready!</string>


    <string name="btn_select_word_text">Select Word</string>


    <string name="player_score_heading">▼ Your Score ▼</string>
    <string name="player_name_text">Player Name :\t</string>
    <string name="player_score_text">Player Score :\t</string>
    <string name="player_game_played_at_text">Game Played At :\t</string>
    <string name="player_previous_scores_heading">▼ Your Previous Scores ▼</string>
</resources>